# ec2

./: .gitignore  GEMINI.md  README.md  cli.py  main.py  pyproject.toml
src/ec2/: __init__.py
src/ec2/scorebook/: __init__.py  ball.py  batter.py  batting_order.py  bowler.py  bowling_order.py  extra.py  how_out.py  score_card.py  scorer.py
src/ec2/ui/: display.py
tests/: classes.py  test_scorebook.py
